--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
     "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^7.23.0",
     "eslint-plugin-react": "^7.23.1",
-    "file-loader": "^6.2.0",
     "jest": "^26.6.3",
+    "lodash-es": "^4.17.21",
     "mini-css-extract-plugin": "^2.1.0",
     "postcss": "^8.2.10",
     "postcss-loader": "^5.2.0",
@@ -67,7 +67,6 @@
     "remove-files-webpack-plugin": "^1.4.5",
     "resize-observer-polyfill": "^1.5.0",
     "sass": "^1.35.2",
-    "lodash-es": "^4.17.21",
     "sass-loader": "^12.1.0",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
@@ -79,5 +78,6 @@
     "react": "^16.0.0 || ^17.0.0 || ^18.0.0"
   },
   "dependencies": {
+    "react-zoom-pan-pinch": "^2.1.3"
   }
 }
